# DSXE-Technical

./: .gitignore  CMakeLists.txt  Dockerfile  markets.csv  simulationexample.xml
deeptrader/: data_generator.py  deep_trader_lstm.py  lob_normalisation.py
deeptrader/models/DeepTrade_LSTM/: DeepTrade_LSTM.weights.h5
kubernetes/jobs/: job-batch-1.yaml  job-batch-11.yaml
scripts/: eks_docker_profit_run.sh  eks_docker_run.sh  generate-jobs.sh  generate_configs.cpp  generate_profit_configs.cpp  generate_profit_jobs.sh  markets_profits.csv  monitor.sh  profit_box_plots.py  profit_curve.py  profit_percentage.py  run_profit_simulations.sh  run_simulations.sh  temp_config.csv  upload_profits_to_s3.sh  upload_to_s3.sh
scripts/final_profits_1/: balanced_bb_lstm_new.csv  balanced_bb_xgb_new.csv  balanced_macd_lstm_new.csv  balanced_macd_xgb_new.csv  balanced_obvd_lstm_new.csv  balanced_obvd_xgb_new.csv  balanced_obvvwap_lstm_new.csv  balanced_obvvwap_xgb_new.csv  balanced_rsi_lstm_new.csv  balanced_rsi_xgb_new.csv  balanced_rsibb_lstm_new.csv  balanced_rsibb_xgb_new.csv  balanced_shvr_lstm.csv  balanced_shvr_xgb.csv  balanced_vwap_lstm_new.csv  balanced_vwap_xgb_new.csv  balanced_zic_lstm.csv  balanced_zic_xgb.csv  balanced_zip_lstm_new.csv  balanced_zip_xgb.csv  onetomany_bb_lstm_new.csv  onetomany_bb_xgb_new.csv  onetomany_macd_lstm_new.csv  onetomany_macd_xgb.csv  onetomany_obvd_lstm_new.csv  onetomany_obvd_xgb.csv  onetomany_obvvwap_lstm_new.csv  onetomany_obvvwap_xgb_new.csv  onetomany_rsi_lstm_new.csv  onetomany_rsi_xgb_new.csv  onetomany_rsibb_lstm_new.csv  onetomany_rsibb_xgb_new.csv  onetomany_shvr_lstm_new.csv  onetomany_shvr_xgb.csv  onetomany_vwap_lstm_new.csv  onetomany_vwap_xgb_new.csv  onetomany_zic_lstm_new.csv  onetomany_zic_xgb.csv  onetomany_zip_lstm_new.csv  onetomany_zip_xgb.csv
scripts/kubernetes/: cluster.yaml  test-job.yaml
scripts/kubernetes/jobs/: job-batch-8.yaml
scripts/plots/: profit_box_plots.py  profit_curve.py  profit_percentage.py
scripts/statistical_tests/: shapiro-wilks.py  win_ratio.py
scripts/technical_charts/: aapl_time_series.py  bb_chart.py  macd_chart.py  obvd.py  rsi_2.py  technical_chart.py  vwap.py
src/: executed  executed.cpp  main.cpp
src/agent/: agent.hpp  agentfactory.hpp  agenttype.hpp  deeptraderlstm.hpp  deeptraderxgb.hpp  marketdatawatcher.hpp  orchestratoragent.hpp  orderinjectoragent.hpp  stockexchange.cpp  stockexchange.hpp  traderagent.cpp  traderagent.hpp  traderbb.hpp  tradermacd.hpp  traderobi.hpp  traderobvdelta.hpp  traderobvvwap.hpp  traderrsi.hpp  traderrsibb.hpp  tradershvr.hpp  tradervwap.hpp  traderzic.hpp  traderzip.hpp
src/config/: configreader.cpp  configreader.hpp  marketwatcherconfig.hpp  orderinjectorconfig.hpp  orderschedule.cpp  orderschedule.hpp  simulationconfig.hpp  traderconfig.hpp
src/deeptrader/: convert_model_to_onnx.py  data_generator.py  deep_trader_lstm.py  deep_trader_server.py  lob_normalisation.py
src/deeptrader/dt_lstm/: deep_trader_lstm.py  onnx_lstm.py
src/deeptrader/dt_lstm/lstm_models/: DeepTrader_LSTM.keras  DeepTrader_LSTM.onnx
src/deeptrader/dt_lstm_2/: deep_trader_lstm.py  onnx_lstm.py
src/deeptrader/dt_lstm_2/lstm_models_2/: DeepTrader_LSTM.keras  DeepTrader_LSTM.onnx
src/deeptrader/dt_xgb/: deep_trader_xgb.py  onnx_xgb.py  shap_plot.py
src/deeptrader/dt_xgb/xgb_models/: DeepTrader_XGB.json  DeepTrader_XGB.onnx  DeepTrader_XGB.pkl  feature_importance.json  params.json
src/deeptrader/dt_xgb_2/: deep_trader_xgb.py  onnx_xgb.py
src/deeptrader/dt_xgb_2/xgb_models_2/: DeepTrader_XGB.onnx  feature_importance.json  params.json
src/deeptrader/models/: deep_trader_nn.py
src/deeptrader/models/DeepTrader_LSTM/: DeepTrader_LSTM.json  DeepTrader_LSTM.onnx  min_max_values.json  normalization_values.json
src/deeptrader/normalised_2/: min_max_values.json
src/deeptrader/normalised_data/: min_max_values.csv  min_max_values.json  normalisation_verify.py
src/message/: config_message.hpp  customer_order_message.hpp  event_message.hpp  message.hpp  messagetype.hpp  profitmessage.hpp  request_trader_list_message.hpp  technical_agent_started_message.hpp  trader_list_message.hpp
src/networking/: networkentity.cpp  tcpconnection.cpp  tcpserver.cpp
src/order/: order.hpp  orderbook.cpp  orderbook.hpp  orderfactory.hpp
src/trade/: lobsnapshot.hpp  marketdata.hpp  profitability.hpp  profitsnapshot.hpp  trade.hpp  tradefactory.hpp
